force-app/main/default/objects/Bulk_Upload_Staging__c/Bulk_Upload_Staging__c.object-meta.xml
<CustomObject>
    <label>Bulk Upload Staging</label>
    <nameField>
        <displayFormat>BUS-{000000000}</displayFormat>
        <label>BU Staging Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Upload Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>