force-app/main/default/objects/Bulk_Upload_Staging__c/fields/Acc_AccountName__c.field-meta.xml
<CustomField>
    <fullName>Acc_AccountName__c</fullName>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>