force-app/main/default/objects/Bulk_Upload_Staging__c/fields/Acc_Definitive_Id__c.field-meta.xml
<CustomField>
    <fullName>Acc_Definitive_Id__c</fullName>
    <label>Account Definitive Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>