force-app/main/default/objects/Bulk_Upload_Staging__c/fields/Acc_Website__c.field-meta.xml
<CustomField>
    <fullName>Acc_Website__c</fullName>
    <label>Account Website</label>
    <type>Url</type>
</CustomField>