force-app/main/default/objects/Bulk_Upload_Staging__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bulk Upload Staging</relationshipLabel>
    <relationshipName>Bulk_Upload_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>