force-app/main/default/objects/Bulk_Upload_Staging__c/fields/Bulk_Upload__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Upload__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bulk Upload File Id</label>
    <referenceTo>Bulk_Upload__c</referenceTo>
    <relationshipLabel>Bulk Upload Staging</relationshipLabel>
    <relationshipName>Staging_Records</relationshipName>
    <type>Lookup</type>
</CustomField>