force-app/main/default/objects/Bulk_Upload_Staging__c/fields/Con_Definitive_Id__c.field-meta.xml
<CustomField>
    <fullName>Con_Definitive_Id__c</fullName>
    <label>Contact Definitive Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>