force-app/main/default/objects/Bulk_Upload_Staging__c/fields/Con_Email__c.field-meta.xml
<CustomField>
    <fullName>Con_Email__c</fullName>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>