force-app/main/default/objects/Bulk_Upload_Staging__c/fields/Con_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Con_First_Name__c</fullName>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>