force-app/main/default/objects/Bulk_Upload_Staging__c/fields/Con_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Con_Last_Name__c</fullName>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>