force-app/main/default/objects/Bulk_Upload_Staging__c/fields/Con_LinkedIn_Profile__c.field-meta.xml
<CustomField>
    <fullName>Con_LinkedIn_Profile__c</fullName>
    <label>LinkedIn Profile</label>
    <type>Url</type>
</CustomField>