force-app/main/default/objects/Bulk_Upload_Staging__c/fields/Con_Marketing_List__c.field-meta.xml
<CustomField>
    <fullName>Con_Marketing_List__c</fullName>
    <label>Contact Marketing List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>