force-app/main/default/objects/Bulk_Upload_Staging__c/fields/Con_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Con_Salutation__c</fullName>
    <label>Salutation</label>
    <length>5</length>
    <type>Text</type>
</CustomField>