force-app/main/default/objects/Bulk_Upload_Staging__c/fields/Con_Title__c.field-meta.xml
<CustomField>
    <fullName>Con_Title__c</fullName>
    <label>Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>