force-app/main/default/objects/Bulk_Upload_Staging__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bulk Upload Staging</relationshipLabel>
    <relationshipName>Bulk_Upload_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>