force-app/main/default/objects/Bulk_Upload_Staging__c/fields/Is_Account_Processed__c.field-meta.xml
<CustomField>
    <fullName>Is_Account_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if Account record is processed successfully.</description>
    <label>Is Account Processed ?</label>
    <type>Checkbox</type>
</CustomField>