force-app/main/default/objects/Bulk_Upload_Staging__c/fields/Is_Contact_Processed__c.field-meta.xml
<CustomField>
    <fullName>Is_Contact_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if Contact record is processed successfully.</description>
    <label>Is Contact Processed ?</label>
    <type>Checkbox</type>
</CustomField>