force-app/main/default/objects/Bulk_Upload_Staging__c/fields/Is_Processed__c.field-meta.xml
<CustomField>
    <fullName>Is_Processed__c</fullName>
    <description>True if both Account &amp; Contact records are processed successfully.</description>
    <formula>AND(Is_Account_Processed__c, Is_Contact_Processed__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Processed ?</label>
    <type>Checkbox</type>
</CustomField>