force-app/main/default/objects/Bulk_Upload_Staging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bulk_Upload__c</columns>
    <columns>Row_Number__c</columns>
    <columns>Has_Error__c</columns>
    <columns>Account__c</columns>
    <columns>Acc_Definitive_Id__c</columns>
    <columns>Contact__c</columns>
    <columns>Con_Definitive_Id__c</columns>
    <columns>Con_Marketing_List__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>